mastodon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon
  namespace: mastodon
  labels:
    app.kubernetes.io/name: mastodon
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mastodon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mastodon
    spec:
      serviceAccountName: mastodon
      securityContext:
        runAsGroup: 991
        runAsUser: 991
        fsGroup: 991
      volumes:
        - name: mastodon
          persistentVolumeClaim:
            claimName: mastodon
      containers:
        - name: web
          securityContext:
            {}
          image: "ghcr.io/mastodon/mastodon:latest"
          imagePullPolicy: IfNotPresent
          command:
            - bundle
            - exec
            - puma
            - -C
            - config/puma.rb
          volumeMounts:
            - name: mastodon
              mountPath: /opt/mastodon/public/system
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            {}
        - name: sidekiq
          securityContext:
            { }
          image: "tootsuite/mastodon:latest"
          imagePullPolicy: IfNotPresent
          command:
            - bundle
            - exec
            - sidekiq
          volumeMounts:
            - name: mastodon
              mountPath: /opt/mastodon/public/system
          resources:
            { }
        - name: streaming
          securityContext:
            { }
          image: "tootsuite/mastodon:latest"
          imagePullPolicy: IfNotPresent
          command:
            - node
            - ./streaming
          ports:
            - name: streaming
              containerPort: 4000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming
          readinessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: streaming
          resources:
            { }
