mastodon/shell.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shell
  namespace: mastodon
  labels:
    app.kubernetes.io/name: mastodon
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mastodon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mastodon
    spec:
      serviceAccountName: mastodon
      securityContext:
        runAsGroup: 991
        runAsUser: 991
      volumes:
        - name: mastodon
          persistentVolumeClaim:
            claimName: mastodon
      containers:
        - name: mastodon
          securityContext:
            {}
          image: "tootsuite/mastodon:v4.1.0"
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
            - |
              while true; do
                sleep 10
              done
          volumeMounts:
            - name: mastodon
              mountPath: /opt/mastodon/public/system
          resources:
            {}
