mastodon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mastodon
  namespace: mastodon
  labels:
    app.kubernetes.io/name: mastodon
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: streaming
      protocol: TCP
      name: streaming
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mastodon
